--- a/document/index.html
+++ b/document/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>BasicView Framework</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="sortcut icon" href="framework/images/icon_radius.png" type="image/png" />
+	<link rel="sortcut icon" href="images/icon_document.png" type="image/png" />
 	<link rel="stylesheet" type="text/css" href="../import-basic-view.css">
 </head>
 <body>
@@ -11,5 +11,6 @@
 
 
 <script type="text/javascript" src="../import-basic-view.js"></script>
+<script type="text/javascript" src="js/document_script.js"></script>
 </body>
 </html>
