--- a/document/doc.html
+++ b/document/doc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BasicView Framework</title>
+	<title>Document BasicView Framework</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="noindex">
 	<link rel="sortcut icon" href="images/icon_document.png" type="image/png" />
@@ -13,49 +13,56 @@
 	<div class="document">
 		<div class="document-group">
 			<div class="document-left">
-				<div class="document-item">Document Element A</div>
+				<div class="document-item">Introduction</div>
 				<div class="document-item-sub">
 					<div class="document-item-sub-item">Sub Element A</div>
 					<div class="document-item-sub-item">Sub Element B</div>
 					<div class="document-item-sub-item">Sub Element C</div>
 					<div class="document-item-sub-item">Sub Element D</div>
 				</div>
-				<div class="document-item">Document Element B</div>
+				<div class="document-item">Grids</div>
 				<div class="document-item-sub">
 					<div class="document-item-sub-item">Sub Element A</div>
 					<div class="document-item-sub-item">Sub Element B</div>
 					<div class="document-item-sub-item">Sub Element C</div>
 					<div class="document-item-sub-item">Sub Element D</div>
 				</div>
-				<div class="document-item">Document Element C</div>
+				<div class="document-item">Cards</div>
 				<div class="document-item-sub">
 					<div class="document-item-sub-item">Sub Element A</div>
 					<div class="document-item-sub-item">Sub Element B</div>
 					<div class="document-item-sub-item">Sub Element C</div>
 					<div class="document-item-sub-item">Sub Element D</div>
 				</div>
-				<div class="document-item">Document Element D</div>
+				<div class="document-item">Components</div>
+				<div class="document-item-sub">
+					<div class="document-item-sub-item">Sub Element A</div>
+					<div class="document-item-sub-item">Sub Element B</div>
+					<div class="document-item-sub-item">Sub Element C</div>
+					<div class="document-item-sub-item">Sub Element D</div>
+				</div>				
+				<div class="document-item">Standards</div>
 				<div class="document-item-sub">
 					<div class="document-item-sub-item">Sub Element A</div>
 					<div class="document-item-sub-item">Sub Element B</div>
 					<div class="document-item-sub-item">Sub Element C</div>
 					<div class="document-item-sub-item">Sub Element D</div>
 				</div>
-				<div class="document-item">Document Element E</div>
+				<div class="document-item">Utilities</div>
 				<div class="document-item-sub">
 					<div class="document-item-sub-item">Sub Element A</div>
 					<div class="document-item-sub-item">Sub Element B</div>
 					<div class="document-item-sub-item">Sub Element C</div>
 					<div class="document-item-sub-item">Sub Element D</div>
 				</div>
-				<div class="document-item">Document Element F</div>
+				<div class="document-item">Menus</div>
 				<div class="document-item-sub">
 					<div class="document-item-sub-item">Sub Element A</div>
 					<div class="document-item-sub-item">Sub Element B</div>
 					<div class="document-item-sub-item">Sub Element C</div>
 					<div class="document-item-sub-item">Sub Element D</div>
 				</div>
-				<div class="document-item">Document Element G</div>
+				<div class="document-item">Colors</div>
 				<div class="document-item-sub">
 					<div class="document-item-sub-item">Sub Element A</div>
 					<div class="document-item-sub-item">Sub Element B</div>
